# r-type-mirror

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODING_STYLE.md  INTEGRATION_GUIDE.md  NETWORKING_SYNC.md  README.md  vcpkg.json
POC/Raylib/: .gitignore  CMakeLists.txt  main.cpp
POC/poc_sdl2/: CMakeLists.txt  poc_sdl2.cpp
engine/: CMakeLists.txt  README.md
engine/include/Animation/: AnimationModule.hpp  IAnimation.hpp
engine/include/Audio/: IAudio.hpp  SFMLAudio.hpp
engine/include/Core/: Engine.hpp  EventBus.hpp  InputManager.hpp  InputMapping.hpp  Logger.hpp  Module.hpp  ModuleLoader.hpp  Platform.hpp  ResourceManager.hpp  SceneManager.hpp
engine/include/ECS/: AnimationSystem.hpp  AudioSystem.hpp  BossAttackSystem.hpp  Camera2DSystem.hpp  CollisionDetectionSystem.hpp  Component.hpp  HealthSystem.hpp  ISystem.hpp  InputSystem.hpp  LevelLoader.hpp  MenuSystem.hpp  PhysicsCollisionSystem.hpp  PhysicsSystem.hpp  PlayerFactory.hpp  PowerUpCollisionSystem.hpp  PowerUpFactory.hpp  PowerUpSpawnSystem.hpp  Registry.hpp  ScoreSystem.hpp  SparseArray.hpp  TextRenderingSystem.hpp
engine/include/ECS/Components/: Animation.hpp  Audio.hpp  Camera2D.hpp  Gameplay.hpp  IComponent.hpp  Physics.hpp  Rendering.hpp  Transform.hpp
engine/include/Physics/: Collider.hpp  IPhysics.hpp  IPhysicsWorld.hpp  PhysicsEngine.hpp  RigidBody.hpp
engine/include/Renderer/: IRenderer.hpp  SFMLRenderer.hpp
engine/src/: main.cpp
engine/src/Audio/: CMakeLists.txt  SFMLAudio.cpp
engine/src/Core/: CMakeLists.txt  Engine.cpp  InputManager.cpp  InputMapping.cpp  SceneManager.cpp
engine/src/ECS/: AudioSystem.cpp  BossAttackSystem.cpp  CMakeLists.txt  Camera2DSystem.cpp  CollisionDetectionSystem.cpp  InputSystem.cpp  MenuSystem.cpp  MovementSystem.cpp  ObstacleCollisionResponseSystem.cpp  PhysicsCollisionSystem.cpp  PhysicsSystem.cpp  PlayerFactory.cpp  PowerUpCollisionSystem.cpp  PowerUpSpawnSystem.cpp  Registry.cpp  ShieldSystem.cpp  TextRenderingSystem.cpp
engine/src/Renderer/: SFMLRenderer.cpp
games/rtype/: CMakeLists.txt
games/rtype/client/: main.cpp
games/rtype/client/include/: GameState.hpp  ResultsState.hpp
games/rtype/client/src/: EditorState.cpp  GameState.cpp  LobbyState.cpp  MenuState.cpp  ResultsState.cpp
games/rtype/include/: BlackOrbSystem.hpp  BossAttackSystem.hpp  BossSystem.hpp  BulletCollisionResponseSystem.hpp  EffectFactory.hpp  EnemyFactory.hpp  EnemySystem.hpp  ForcePodSystem.hpp  LevelLoader.hpp  MineSystem.hpp  ObstacleCollisionResponseSystem.hpp  PlayerCollisionResponseSystem.hpp  PlayerFactory.hpp  PlayerSystem.hpp  PowerUpCollisionSystem.hpp  PowerUpFactory.hpp  PowerUpSpawnSystem.hpp  ShieldSystem.hpp  ShootingSystem.hpp  ThirdBulletSystem.hpp
games/rtype/systems/: BlackOrbSystem.cpp  BossAttackSystem.cpp  BossSystem.cpp  BulletCollisionResponseSystem.cpp  EffectFactory.cpp  EnemyFactory.cpp  EnemySystem.cpp  ForcePodSystem.cpp  LevelLoader.cpp  MineSystem.cpp  ObstacleCollisionResponseSystem.cpp  PlayerCollisionResponseSystem.cpp  PlayerFactory.cpp  PlayerSystem.cpp  PowerUpCollisionSystem.cpp  PowerUpFactory.cpp  PowerUpSpawnSystem.cpp  ShieldSystem.cpp  ShootingSystem.cpp  ThirdBulletSystem.cpp
libs/engine/: CMakeLists.txt  README.md
libs/engine/include/: ComponentData.hpp
libs/engine/include/Animation/: AnimationModule.hpp  AnimationTypes.hpp  IAnimation.hpp
libs/engine/include/Audio/: IAudio.hpp  SFMLAudio.hpp
libs/engine/include/Core/: ColorFilter.hpp  Engine.hpp  Logger.hpp  Module.hpp  ModuleLoader.hpp  Platform.hpp
libs/engine/include/ECS/: AnimationSystem.hpp  BlackOrbSystem.hpp  BossAttackSystem.hpp  BossSystem.hpp  BulletCollisionResponseSystem.hpp  BulletCollisionSystem.hpp  CollisionDetectionSystem.hpp  CollisionSystem.hpp  Component.hpp  EffectFactory.hpp  EnemyFactory.hpp  EnemySystem.hpp  Entity.hpp  ForcePodSystem.hpp  HealthSystem.hpp  ISystem.hpp  InputSystem.hpp  LevelLoader.hpp  MenuSystem.hpp  MineSystem.hpp  MovementSystem.hpp  ObstacleCollisionResponseSystem.hpp  PlayerCollisionResponseSystem.hpp  PlayerFactory.hpp  PlayerSystem.hpp  PowerUpCollisionSystem.hpp  PowerUpFactory.hpp  PowerUpSpawnSystem.hpp  Registry.hpp  RenderingSystem.hpp  ScrollingSystem.hpp  ShieldSystem.hpp  ShootingSystem.hpp  SparseArray.hpp  TextRenderingSystem.hpp  ThirdBulletSystem.hpp
libs/engine/include/Math/: Types.hpp
libs/engine/include/Network/: INetwork.hpp
libs/engine/include/Physics/: IPhysics.hpp
libs/engine/include/Renderer/: IRenderer.hpp  SFMLRenderer.hpp
libs/engine/include/Serialization/: Deserializer.hpp  Serializer.hpp
libs/engine/src/Animation/: AnimationModule.cpp  CMakeLists.txt
libs/engine/src/Audio/: CMakeLists.txt  SFMLAudio.cpp
libs/engine/src/Core/: CMakeLists.txt  ColorFilter.cpp  Engine.cpp  ModuleLoader.cpp
libs/engine/src/ECS/: AnimationSystem.cpp  BlackOrbSystem.cpp  BossAttackSystem.cpp  BossSystem.cpp  BulletCollisionResponseSystem.cpp  BulletCollisionSystem.cpp  CMakeLists.txt  CollisionDetectionSystem.cpp  CollisionSystem.cpp  EffectFactory.cpp  EnemyFactory.cpp  EnemySystem.cpp  ForcePodSystem.cpp  HealthSystem.cpp  (+21 more)
libs/network/: CMakeLists.txt  README.md  RFC_TCP_LOBBY.md  RFC_UDP_GAME.md
libs/network/include/: AsioNetwork.hpp  AsioNetworkModule.hpp  Compression.hpp  Deserializer.hpp  Endpoint.hpp  GameClient.hpp  GameServer.hpp  INetworkModule.hpp  LobbyClient.hpp  LobbyServer.hpp  NetworkTcpSocket.hpp  Protocol.hpp  RoomClient.hpp  RoomManager.hpp  Serializer.hpp  Snapshot.hpp  SyncClient.hpp  SyncServer.hpp  TcpServer.hpp  TcpSocket.hpp  UdpSocket.hpp
libs/network/src/: AsioNetwork.cpp  AsioNetworkModule.cpp  AsioNetworkModuleExports.cpp  Deserializer.cpp  GameClient.cpp  GameServer.cpp  LobbyClient.cpp  LobbyServer.cpp  NetworkTcpSocket.cpp  RoomClient.cpp  RoomManager.cpp  Serializer.cpp  Snapshot.cpp  SyncClient.cpp  SyncServer.cpp  TcpServer.cpp  TcpSocket.cpp  UdpSocket.cpp
network/: CMakeLists.txt
network/include/network/: LobbyClient.hpp  LobbyServer.hpp  UdpSocket.hpp
network/src/: Deserializer.cpp  LobbyClient.cpp  LobbyServer.cpp  Serializer.cpp  UdpSocket.cpp
(+120 files in other folders)
